--- a/app/package.json
+++ b/app/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.4.2",
     "@types/node": "^20.8.7",
+    "terser": "^5.26.0",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-solid": "^2.7.0"
